# adv-ood-robustness-6bad-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md  dataset_summary.json
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: diversity.tex  main_results.tex  stat_tests.tex
paper_search_results/: adversarial_robustness_out-of-distribution_robustness_neural_network_ensembles_d_20260323_032413.jsonl
papers/: README.md  arxiv_search_results.json  extracted_notes.json  paper_finder_results.json  papers_metadata.json
papers/pages/: 1612.01474_Simple_and_Scalable_Predictive_Uncertainty_Deep_Ensembles_2016_manifest.txt  16_2023_Hierarchical_Pruning_of_Deep_Ensembles_with_Focal_Diversity_manifest.txt  1705.07204_Ensemble_Adversarial_Training_Attacks_and_Defenses_2017_manifest.txt  (+11 more)
results/: config.json  dataset_summary.json  environment.json  example_samples.json  metrics.json  ood_scores.json  runtime.json  statistical_analysis.json  summary_table.csv  summary_table_run1.csv  train_history.csv
src/: run_research.py
